some overflow issues

--- a/web-app/src/components/Observations/Observations.scss
+++ b/web-app/src/components/Observations/Observations.scss
@@ -9,6 +9,9 @@
   justify-content: space-between;
 
   height: calc(100% - 126px);
+}
+
+.Observations__PolaroidIcon__Wrapper {
   overflow: hidden;
 }
 
