--- a/web-app/src/components/OnBoard/Fase1/OnBoard.scss
+++ b/web-app/src/components/OnBoard/Fase1/OnBoard.scss
@@ -135,3 +135,7 @@
   height: 70px;
   margin: 30px;
 }
+
+.Observations__Empty {
+  overflow: hidden;
+}
